# mo824-max-sc-qbf

./: .gitignore  README.md  pyproject.toml
input/: example-01.txt  example-02.txt  example-03.txt  instance-01.txt  instance-02.txt  instance-03.txt  instance-04.txt  instance-05.txt  instance-06.txt  instance-07.txt  instance-08.txt  instance-09.txt  instance-10.txt  instance-11.txt  instance-12.txt  instance-13.txt  instance-14.txt  instance-15.txt
logs/: ex-01.txt  instance-01.txt  instance-02.txt  instance-03.txt  instance-04.txt  instance-05.txt  instance-06.txt  instance-07.txt  instance-08.txt  instance-09.txt  instance-10.txt  instance-11.txt  instance-12.txt  instance-13.txt  instance-14.txt  instance-15.txt
src/: generate_instances.py  main.py  max_sc_qbf.py
